//Modelagem Cencosud Api Lib - Aplicação de biblioteca de apis e dependencias de componentes entre endpoints

Table User {
    id              GUID        [pk, increment]   // Primary Key
    name            varchar(255) [not null]       // Nome do usuário
    email           varchar(255) [not null, unique] // E-mail do usuário
    password        varchar(255) [not null]      
    created_at      timestamp   [default: `current_timestamp`] 
    updated_at      timestamp   [default: `current_timestamp`] 
    is_deleted      boolean     [default: false, not null] 
}

Table Project {
    id              int        [pk, increment]   // Primary Key
    name            varchar(255) [not null]       // Nome do projeto
    description     text
    responsavelTecnico GUID     [ref: > User.id, not null] // Foreign Key para o projeto    // Responsável técnico do projeto
    created_at      timestamp   [default: `current_timestamp`]
    updated_at      timestamp   [default: `current_timestamp`]
    is_deleted      boolean     [default: false, not null]
}

Table ApiInstance {
    id              int         [pk, increment]   // Primary Key
    api_id          int         [ref: > Api.id, not null] // Foreign Key para a API
    project_id     int          [ref: > Project.id, not null] // Foreign Key para o endpoint
    created_at      timestamp   [default: `current_timestamp`] 
    updated_at      timestamp   [default: `current_timestamp`] 
    is_deleted      boolean     [default: false, not null] 
}

Table Api {
    id              int         [pk, increment]   // Primary Key
    name            varchar(255) [not null, unique] // Nome da API
    description     text        
    baseUrl         varchar(255) [not null]     
    version         varchar(50)  
    created_at      timestamp   [default: `current_timestamp`] 
    updated_at      timestamp   [default: `current_timestamp`] 
    is_deleted      boolean     [default: false, not null] 
}


Table Endpoint {
    id              int         [pk, increment]   // Primary Key
    api_id          int         [ref: > Api.id, not null] // Foreign Key para a API
    path            varchar(255) [not null]      
    method          varchar(10)  [not null]       
    description     text        
    created_at      timestamp   [default: `current_timestamp`] 
    updated_at      timestamp   [default: `current_timestamp`] 
    is_deleted      boolean     [default: false, not null] 
}

Table Component {
    id              int         [pk, increment]   // Primary Key
    name            varchar(255) [not null, unique] // Nome do componente
    type            ComponentType [not null]      // Tipo de componente baseado no enum ComponentType
    description     text        
    created_at      timestamp   [default: `current_timestamp`] 
    updated_at      timestamp   [default: `current_timestamp`] 
    is_deleted      boolean     [default: false, not null] 
}

Table ComponentInstance {
    id              int         [pk, increment]   // Primary Key
    endpoint_id     int         [ref: > Endpoint.id, not null] // Foreign Key para Endpoint
    component_id    int         [ref: > Component.id, not null] // Foreign Key para Component
    configuration   json        
    created_at      timestamp   [default: `current_timestamp`] 
    updated_at      timestamp   [default: `current_timestamp`] 
    is_deleted      boolean     [default: false, not null] 
}


Enum ComponentType {
    Procedure
    Function
    Middleware
    Validation
    DTO
    Security
    Configuration
    Response
}

